# python-cookiecutter

./: .pre-commit-config.yaml  README.md  cookiecutter.json  pyproject.toml  setup.cfg
{{cookiecutter.project_slug}}/: requirements-dev.txt
